--- a/DX11Renderer/DX11Renderer/imgui.ini
+++ b/DX11Renderer/DX11Renderer/imgui.ini
@@ -21,10 +21,25 @@ Collapsed=0
 [Window][Light]
 Pos=36,8
 Size=197,347
-Collapsed=1
+Collapsed=0
 
 [Window][Log]
 Pos=4,292
 Size=324,411
 Collapsed=1
+
+[Window][Light0]
+Pos=844,500
+Size=146,205
+Collapsed=0
+
+[Window][Light1]
+Pos=993,501
+Size=131,203
+Collapsed=0
+
+[Window][Light2]
+Pos=1129,501
+Size=131,203
+Collapsed=0
 
