--- a/DX11Renderer/DX11Renderer/imgui.ini
+++ b/DX11Renderer/DX11Renderer/imgui.ini
@@ -36,10 +36,15 @@ Collapsed=1
 [Window][Light1]
 Pos=996,37
 Size=162,243
-Collapsed=0
+Collapsed=1
 
 [Window][Light2]
 Pos=1132,37
 Size=131,203
 Collapsed=1
+
+[Window][Light3]
+Pos=1117,107
+Size=131,226
+Collapsed=0
 
