--- a/DX11Renderer/DX11Renderer/DX11Renderer.vcxproj.filters
+++ b/DX11Renderer/DX11Renderer/DX11Renderer.vcxproj.filters
@@ -136,6 +136,9 @@
     <Filter Include="Shaders\Common">
       <UniqueIdentifier>{02fecf65-cc4c-4752-ba8f-fb548b2821e4}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\Util">
+      <UniqueIdentifier>{a795e74b-c6da-4f32-ba97-ecb5aadcee81}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
@@ -317,6 +320,12 @@
     </ClCompile>
     <ClCompile Include="DrawCall.cpp">
       <Filter>Source Files\RenderJobs</Filter>
+    </ClCompile>
+    <ClCompile Include="RendererList.cpp">
+      <Filter>Source Files\Drawable</Filter>
+    </ClCompile>
+    <ClCompile Include="Frustum.cpp">
+      <Filter>Source Files\Util</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -583,6 +592,12 @@
     </ClInclude>
     <ClInclude Include="DrawCall.h">
       <Filter>Header Files\RenderJobs</Filter>
+    </ClInclude>
+    <ClInclude Include="RendererList.h">
+      <Filter>Header Files\Drawable</Filter>
+    </ClInclude>
+    <ClInclude Include="Frustum.h">
+      <Filter>Header Files\Util</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
