More transform work

--- a/DX11Renderer/DX11Renderer/DX11Renderer.vcxproj
+++ b/DX11Renderer/DX11Renderer/DX11Renderer.vcxproj
@@ -307,6 +307,7 @@
     <ClInclude Include="Timer.h" />
     <ClInclude Include="Topology.h" />
     <ClInclude Include="TransformCbuf.h" />
+    <ClInclude Include="Transforms.h" />
     <ClInclude Include="VertexBufferWrapper.h" />
     <ClInclude Include="RawBufferData.h" />
     <ClInclude Include="VertexLayout.h" />
