Lightmanager cpp file

--- a/DX11Renderer/DX11Renderer/DX11Renderer.vcxproj
+++ b/DX11Renderer/DX11Renderer/DX11Renderer.vcxproj
@@ -188,6 +188,7 @@
     <ClCompile Include="InputLayout.cpp" />
     <ClCompile Include="InstancedMeshRenderer.cpp" />
     <ClCompile Include="Light.cpp" />
+    <ClCompile Include="LightManager.cpp" />
     <ClCompile Include="ModelNode.cpp" />
     <ClCompile Include="RenderConstants.cpp" />
     <ClCompile Include="DrawCall.cpp" />
