Setup light material to cast shadows for now

--- a/DX11Renderer/DX11Renderer/imgui.ini
+++ b/DX11Renderer/DX11Renderer/imgui.ini
@@ -46,10 +46,30 @@ Collapsed=1
 [Window][Light3]
 Pos=1117,107
 Size=156,348
-Collapsed=1
+Collapsed=0
 
 [Window][Light4]
 Pos=1058,132
 Size=213,305
+Collapsed=1
+
+[Window][Light5]
+Pos=698,5
+Size=131,226
+Collapsed=1
+
+[Window][Light6]
+Pos=562,7
+Size=131,226
+Collapsed=1
+
+[Window][Light7]
+Pos=422,8
+Size=131,226
+Collapsed=1
+
+[Window][Light8]
+Pos=285,8
+Size=131,318
 Collapsed=1
 
